--- a/style/index.css
+++ b/style/index.css
@@ -94,8 +94,10 @@ nav {
 
 #projects {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
     padding: 2rem 0;
+    width: 100%;
 }
 
 .projects-row {
@@ -107,7 +109,11 @@ nav {
 .project {
     width: 22vw;
     height: 22vw;
+    margin: 3rem 3rem;
     text-align: center;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 25%;
 }
 
 .project:hover {
@@ -139,6 +145,7 @@ footer {
     background-color: rgb(49, 49, 49);
     width: 100%;
     height: 10rem;
+    margin-top: 3rem;
 }
 
 #footer-contact {
