--- a/style/index.css
+++ b/style/index.css
@@ -51,7 +51,10 @@ header {
 }
 
 nav {
+    width: 25rem;
     padding: 0 1.5rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 #sliders {
@@ -94,25 +97,18 @@ nav {
 
 #projects {
     display: flex;
-    /* flex-direction: column; */
     flex-wrap: wrap;
     padding: 2rem 0;
     width: 100%;
 }
 
-.projects-row {
-    padding: 3rem 0;
-    display: flex;
-    justify-content: space-between;
-}
-
 .project {
-    width: 22vw;
-    height: 22vw;
+    width: 22%;
+    height: 22%;
     margin: 3rem 3rem;
     text-align: center;
     flex-grow: 1;
-    flex-shrink: 0;
+    flex-shrink: 1;
     flex-basis: 25%;
 }
 
@@ -183,4 +179,19 @@ footer {
 
 #social .fa-linkedin:hover {
     color: #0072b1;
+}
+
+@media screen and (max-width: 425px){
+    nav{
+        display: none;
+    }
+    .project {
+        width: 100%;
+        height: 100%;
+        margin: 3rem 3rem;
+        text-align: center;
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 100%;
+    }
 }
